Removed the get quote button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="Insurance compant html template for small insurance firm. Template included Insurance products, Find an agent, Claim center etc. ">
+<meta name="description" content="Website for Prime Insurance company ">
 <meta name="keywords" content="Insurance, Home Insurance, Auto Insurance, Life Insurance, Find an agent">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<title>prime | Insurance Responsive Template</title>
+<title>Prime | Insurance Company</title>
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,15 +52,7 @@
       <div class="col-md-4"> <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="prime Insurance Logo" class="img-responsive"></a> </div>
       <div class="col-md-8 cta-box text-right">
         <!-- Single button -->
-        <div class="btn-group"> <a href="#" class="btn tp-btn tp-btn-orange dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Get a Quote <span class="caret"></span> </a>
-          <ul class="dropdown-menu" role="menu">
-            <li> <a href="#"><i class="fa fa-car"></i>Auto Insurance</a></li>
-            <li> <a href="#"><i class="fa fa-heart"></i> Life Insurance</a></li>
-            <li> <a href="#"> <i class="fa fa-envelope"></i>Business Insurance</a></li>
-            <li> <a href="#"> <i class="fa fa-plane"></i>Travel Insurance</a></li>
-            <li> <a href="#"> <i class="fa fa-home"></i>Home Insurance</a></li>
-          </ul>
-        </div>
+        
         <a href="#" class="btn tp-btn tp-btn-blue">Login</a> <a href="#" class="btn search tp-search-btn"><i class="fa fa-search"></i></a> </div>
     </div>
   </div>
